--- a/past/index.html
+++ b/past/index.html
@@ -135,6 +135,12 @@
     </thead>
     <tbody>
       <tr>
+        <td class="date">21 Nov 2025</td>
+        <td class="link"><a href="https://www.independent.co.uk/news/business/rachel-reeves-chancellor-government-mel-stride-office-for-budget-responsibility-b2869671.html">Government borrowing higher-than-forecast in pre-Budget blow to Chancellor</a></td>
+        <td class="source">The Indepdendent</td>
+        <td class="blow"> ▼ 8% BLOW</td>
+      </tr>   
+      <tr>
         <td class="date">20 Nov 2025</td>
         <td class="link"><a href="https://www.express.co.uk/news/politics/2136679/Taxes-Labour-economy-Rachel-Reeves-Eurotunnel">Huge blow for Rachel Reeves as Eurotunnel cancels all UK projects over high taxes</a></td>
         <td class="source">Daily Express</td>
