--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       color: #222;
     }
 
-/**    .party-banner {
+    .party-banner {
       position: fixed;
       top: -20rem;        
       left: -150px;     
@@ -95,7 +95,7 @@
 
     .party-banner.five {
       top: 60rem;
-    } */
+    } 
 
     h1 {
       font-size: 3rem;
@@ -719,14 +719,14 @@
   </style>
 </head>
 <body>
- <!-- <div class="party-banner">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
+  <div class="party-banner">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner two">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner three">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner four">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner five">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
--->
+
   
-  <h1>REEVES-O-METER</h1>
+  <h1>REEVES-O-METER BUDGET SPECIAL <br><br> VOTE BELOW!</h1>
 
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
@@ -789,7 +789,7 @@
 
   <div class="vote-section">
     <p class="vote-prompt">
-      Will the next headline be a boost or a blow for Reeves?
+      Is the budget a boost or blow for Reeves?
     </p>
 
     <div class="vote-buttons">
@@ -853,7 +853,7 @@
   // starting angle 
   // -90 = full blow, 0 = bloost, +90 = full boost
   const DEFAULT_ANGLE = -39;   // <-- change this before each deployment
-  const DEPLOY_DATE = "201120250747"; // <-- change this before each deployment
+  const DEPLOY_DATE = "251120252026"; // <-- change this before each deployment
   const STORAGE_KEY   = `reevesometerAngle_${DEPLOY_DATE}`;
   const MAX_ANGLE     = 10;   // user movement range
   const STEP          = 2;    // each click = 2°
