--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
     <span id="headline-text">
-       21/11/2025 THE INDEPENDENT: GOVERNMENT BORROWING HIGHER-THAN-FORECAST IN PRE-BUDGET  
+       26/11/2025 REEVES-O-METER: ARRESTED FARMERS REDIRECTED TO OBR TO DEAL WITH UNPRECEDENTED LEEK IN
        <span class="the-word">BLOW</span> TO CHANCELLOR
     </span>
     <span id="headline-indicator" class="blow">
