amendment to headline link

--- a/index.html
+++ b/index.html
@@ -837,8 +837,8 @@
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
-    <a href="https://www.independent.co.uk/news/business/rachel-reeves-chancellor-government-mel-stride-office-for-budget-responsibility-b2869671.html" target="blank" rel="noopener">headline</a>
-    is real)
+    <a href="https://reevesometer.co.uk/past/" target="blank" rel="noopener">headlines</a>
+    are *usually* real)
   </div>
 
   <!-- headline generator popup-->
