--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       color: #222;
     }
 
-    .party-banner {
+    /*.party-banner {
       position: fixed;
       top: -20rem;        
       left: -150px;     
@@ -96,7 +96,7 @@
     .party-banner.five {
       top: 60rem;
     } 
-
+*/
     h1 {
       font-size: 3rem;
       margin-bottom: 1rem;
@@ -719,24 +719,24 @@
   </style>
 </head>
 <body>
-  <div class="party-banner">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
+  <!--<div class="party-banner">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner two">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner three">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner four">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
   <div class="party-banner five">BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY BUDGET DAY </div>
-
+-->
   
-  <h1>REEVES-O-METER BUDGET SPECIAL <br><br> VOTE BELOW!</h1>
+  <h1>REEVES-O-METER</h1>
 
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
     <span id="headline-text">
-       26/11/2025 REEVES-O-METER: ARRESTED FARMERS REDIRECTED TO OBR TO DEAL WITH UNPRECEDENTED LEEK IN
-       <span class="the-word">BLOW</span> TO CHANCELLOR
+       01/12/2025 THE INDEPENDENT: 
+       <span class="the-word">BLOW</span> FOR REEVES AS BUSINESS CONFIDENCE AT NEAR RECORD LOW AFTER BUDGET
     </span>
     <span id="headline-indicator" class="blow">
       <!-- update estimate and class before each deployment-->
-      REEVES-O-METER estimates ▼ 8% blow
+      REEVES-O-METER estimates ▼ 12% blow
     </span>
   </div>
 
@@ -780,7 +780,7 @@
   <div class="scorecard">
     <span class="boost-score">BOOSTS: 3</span>
     <span class="divider">|</span>
-    <span class="blow-score">BLOWS: 9</span>
+    <span class="blow-score">BLOWS: 10</span>
   </div>
 
   <div class="generate-section">
@@ -837,8 +837,8 @@
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
-    <a href="https://reevesometer.co.uk/past/" target="blank" rel="noopener">headlines</a>
-    are *usually* real)
+    <a href="https://www.independent.co.uk/news/uk/politics/reeves-budget-business-confidence-tax-b2875284.html" target="blank" rel="noopener">headline</a>
+    is real)
   </div>
 
   <!-- headline generator popup-->
@@ -852,8 +852,8 @@
 
   // starting angle 
   // -90 = full blow, 0 = bloost, +90 = full boost
-  const DEFAULT_ANGLE = -39;   // <-- change this before each deployment
-  const DEPLOY_DATE = "251120252026"; // <-- change this before each deployment
+  const DEFAULT_ANGLE = -51;   // <-- change this before each deployment
+  const DEPLOY_DATE = "021220251200"; // <-- change this before each deployment
   const STORAGE_KEY   = `reevesometerAngle_${DEPLOY_DATE}`;
   const MAX_ANGLE     = 10;   // user movement range
   const STEP          = 2;    // each click = 2°
