--- a/index.html
+++ b/index.html
@@ -731,12 +731,12 @@
   <div class="headline">
     <!-- update this headline and the-word before each deployment-->
     <span id="headline-text">
-       01/12/2025 THE INDEPENDENT: 
-       <span class="the-word">BLOW</span> FOR REEVES AS BUSINESS CONFIDENCE AT NEAR RECORD LOW AFTER BUDGET
+       03/12/2025 THE INDEPENDENT: FRESH
+       <span class="the-word">BLOW</span> FOR REEVES AS LABOUR HIT WITH REBELLION OVER TRACTOR TAX
     </span>
     <span id="headline-indicator" class="blow">
       <!-- update estimate and class before each deployment-->
-      REEVES-O-METER estimates ▼ 12% blow
+      REEVES-O-METER estimates ▼ 3% blow
     </span>
   </div>
 
@@ -780,7 +780,7 @@
   <div class="scorecard">
     <span class="boost-score">BOOSTS: 3</span>
     <span class="divider">|</span>
-    <span class="blow-score">BLOWS: 10</span>
+    <span class="blow-score">BLOWS: 11</span>
   </div>
 
   <div class="generate-section">
@@ -837,8 +837,8 @@
 
   <div class="disclaimer">this is, of course, a parody (but the 
     <!-- update this url before each deployment-->
-    <a href="https://www.independent.co.uk/news/uk/politics/reeves-budget-business-confidence-tax-b2875284.html" target="blank" rel="noopener">headline</a>
-    is real)
+    <a href="https://www.independent.co.uk/news/uk/politics/labour-markus-campbell-savours-suspended-budget-tractor-tax-b2877466.html" target="blank" rel="noopener">headline</a>
+    is (or at least, was at one point) real)
   </div>
 
   <!-- headline generator popup-->
@@ -852,8 +852,8 @@
 
   // starting angle 
   // -90 = full blow, 0 = bloost, +90 = full boost
-  const DEFAULT_ANGLE = -51;   // <-- change this before each deployment
-  const DEPLOY_DATE = "021220251200"; // <-- change this before each deployment
+  const DEFAULT_ANGLE = -54;   // <-- change this before each deployment
+  const DEPLOY_DATE = "041220251025"; // <-- change this before each deployment
   const STORAGE_KEY   = `reevesometerAngle_${DEPLOY_DATE}`;
   const MAX_ANGLE     = 10;   // user movement range
   const STEP          = 2;    // each click = 2°
