--- a/past/index.html
+++ b/past/index.html
@@ -134,16 +134,22 @@
       </tr>
     </thead>
     <tbody>
-        <tr>
+      <tr>
+        <td class="date">03 Dec 2025</td>
+        <td class="link"><a href="https://www.independent.co.uk/news/uk/politics/labour-markus-campbell-savours-suspended-budget-tractor-tax-b2877466.html">Fresh blow for Reeves as Labour hit with rebellion over tractor tax</a></td>
+        <td class="source">The Independent</td>
+        <td class="blow"> ▼ 3% BLOW</td>
+      </tr>
+      <tr>
         <td class="date">01 Dec 2025</td>
         <td class="link"><a href="https://www.independent.co.uk/news/uk/politics/reeves-budget-business-confidence-tax-b2875284.html">Blow for Reeves as business confidence at near record low after Budget</a></td>
-        <td class="source">The Indepdendent</td>
+        <td class="source">The Independent</td>
         <td class="blow"> ▼ 12% BLOW</td>
       </tr>
       <tr>
         <td class="date">21 Nov 2025</td>
         <td class="link"><a href="https://www.independent.co.uk/news/business/rachel-reeves-chancellor-government-mel-stride-office-for-budget-responsibility-b2869671.html">Government borrowing higher-than-forecast in pre-Budget blow to Chancellor</a></td>
-        <td class="source">The Indepdendent</td>
+        <td class="source">The Independent</td>
         <td class="blow"> ▼ 8% BLOW</td>
       </tr>   
       <tr>
